--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,600;0,700;1,600&family=Radio+Canada:wght@300;400;500&display=swap');
+
+body{
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Radio Canada', sans-serif;
+    background-color: #edf6f9;
+}
+
+code{
+    border-radius: 20px;
+}
+
+.card, .card-body, .card-header, .card-footer{
+    background-color: #83c5be;
+    border-radius: 20px;
+    border:0px;
+}
+
+.card{
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1);
+    transition: opacity 0.2s ease, box-shadow 0.2s ease;
+    opacity: 1;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+input{
+    border-radius: 20px !important;
+}
